--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -3,6 +3,8 @@ astroid==2.8.6
 asttokens==2.0.5
 backcall==0.2.0
 black==22.1.0
+boto3==1.21.27
+botocore==1.24.27
 click==8.0.4
 decorator==5.1.1
 executing==0.8.3
@@ -17,6 +19,7 @@ isort==5.10.1
 itsdangerous==2.0.1
 jedi==0.18.1
 Jinja2==3.0.3
+jmespath==1.0.0
 lazy-object-proxy==1.7.1
 MarkupSafe==2.1.1
 marshmallow==3.15.0
@@ -38,7 +41,9 @@ Pygments==2.11.2
 PyJWT==2.3.0
 pylint==2.11.1
 pyparsing==3.0.7
+python-dateutil==2.8.2
 pytz==2022.1
+s3transfer==0.5.2
 six==1.16.0
 SQLAlchemy==1.4.32
 stack-data==0.2.0
@@ -46,6 +51,7 @@ toml==0.10.2
 tomli==2.0.1
 traitlets==5.1.1
 typing_extensions==4.1.1
+urllib3==1.26.9
 wcwidth==0.2.5
 Werkzeug==2.0.3
 wrapt==1.13.3
