--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,19 +1,25 @@
 aniso8601==9.0.1
 astroid==2.8.6
 asttokens==2.0.5
+attrs==21.4.0
 backcall==0.2.0
 black==22.1.0
 boto3==1.21.27
 botocore==1.24.27
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.0.4
 decorator==5.1.1
 executing==0.8.3
-Flask==1.1.2
+Faker==13.3.4
+Flask==2.0.3
 Flask-JWT-Extended==4.3.1
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.3
+iniconfig==1.1.1
 ipython==8.1.1
 isort==5.10.1
 itsdangerous==2.0.1
@@ -33,16 +39,20 @@ pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==2.5.1
+pluggy==1.0.0
 prompt-toolkit==3.0.28
 psycopg2-binary==2.8.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
 Pygments==2.11.2
 PyJWT==2.3.0
 pylint==2.11.1
 pyparsing==3.0.7
+pytest==7.1.1
 python-dateutil==2.8.2
 pytz==2022.1
+requests==2.27.1
 s3transfer==0.5.2
 six==1.16.0
 SQLAlchemy==1.4.32
